v3/crates/jsonapi/tests/snapshots/jsonapi_golden_tests__result_for_role_admin@filtering__MediaType.txt.snap
---
source: crates/jsonapi/tests/jsonapi_golden_tests.rs
expression: result
input_file: crates/jsonapi/tests/passing/filtering/MediaType.txt
---
DocumentData {
    data: Some(
        Multiple(
            [
                Resource {
                    _type: "default_MediaType",
                    id: "1",
                    attributes: {
                        "Name": String("MPEG audio file"),
                    },
                    relationships: None,
                    links: None,
                    meta: None,
                },
            ],
        ),
    ),
    included: None,
    links: None,
    meta: None,
    jsonapi: None,
}
